refactor: rename FunApp person domain to student
