# components/fun-app/docs/swagger.json
@@ -4,9 +4,9 @@
         "contact": {}
     },
     "paths": {
-        "/person": {
+        "/student": {
             "get": {
-                "description": "List Person and Optionally Search",
+                "description": "List Student and Optionally Search",
                 "consumes": [
                     "application/json"
                 ],
@@ -14,25 +14,25 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Person"
+                    "Student"
                 ],
-                "summary": "List Person and Search",
+                "summary": "List Student and Search",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Filter persons by name",
+                        "description": "Filter students by name",
                         "name": "name",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "Filter persons by gender",
+                        "description": "Filter students by gender",
                         "name": "gender",
                         "in": "query"
                     },
                     {
                         "type": "integer",
-                        "description": "Filter persons by age",
+                        "description": "Filter students by age",
                         "name": "age",
                         "in": "query"
                     },
@@ -62,7 +62,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/fun.PersonList"
+                            "$ref": "#/definitions/fun.StudentList"
                         }
                     },
                     "500": {
@@ -74,7 +74,7 @@
                 }
             },
             "post": {
-                "description": "Create a new person with the provided data",
+                "description": "Create a new student with the provided data",
                 "consumes": [
                     "application/json"
                 ],
@@ -82,23 +82,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Person"
+                    "Student"
                 ],
-                "summary": "Create a new person",
+                "summary": "Create a new student",
                 "parameters": [
                     {
-                        "description": "Person Request",
+                        "description": "Student Request",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/fun.PersonRequest"
+                            "$ref": "#/definitions/fun.StudentRequest"
                         }
                     }
                 ],
                 "responses": {
                     "201": {
-                        "description": "Id of created person",
+                        "description": "Id of created student",
                         "schema": {
                             "type": "string"
                         }
@@ -118,9 +118,9 @@
                 }
             }
         },
-        "/person/{id}": {
+        "/student/{id}": {
             "get": {
-                "description": "Get a person's details by their ID",
+                "description": "Get a student's details by their ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -128,13 +128,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Person"
+                    "Student"
                 ],
-                "summary": "Get a person by ID",
+                "summary": "Get a student by ID",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Person ID",
+                        "description": "Student ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -144,7 +144,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/fun.Person"
+                            "$ref": "#/definitions/fun.Student"
                         }
                     },
                     "500": {
@@ -156,7 +156,7 @@
                 }
             },
             "put": {
-                "description": "Update a person's details",
+                "description": "Update a student's details",
                 "consumes": [
                     "application/json"
                 ],
@@ -164,24 +164,24 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Person"
+                    "Student"
                 ],
-                "summary": "Update a person",
+                "summary": "Update a student",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Person ID",
+                        "description": "Student ID",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "Person Request",
+                        "description": "Student Request",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/fun.PersonRequest"
+                            "$ref": "#/definitions/fun.StudentRequest"
                         }
                     }
                 ],
@@ -213,7 +213,7 @@
                 }
             },
             "delete": {
-                "description": "Delete persons by their ID",
+                "description": "Delete students by their ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -221,13 +221,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Person"
+                    "Student"
                 ],
-                "summary": "Delete persons by ID",
+                "summary": "Delete students by ID",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Person ID",
+                        "description": "Student ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -255,9 +255,9 @@
                 }
             }
         },
-        "/person/{id}/audit": {
+        "/student/{id}/audit": {
             "get": {
-                "description": "List Person Audit by ID",
+                "description": "List Student Audit by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -265,13 +265,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Person"
+                    "Student"
                 ],
-                "summary": "List Person Audit",
+                "summary": "List Student Audit",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Person ID",
+                        "description": "Student ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -283,7 +283,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/fun.PersonAudit"
+                                "$ref": "#/definitions/fun.StudentAudit"
                             }
                         }
                     },
@@ -312,7 +312,7 @@
                 }
             }
         },
-        "fun.Person": {
+        "fun.Student": {
             "type": "object",
             "required": [
                 "age",
@@ -343,7 +343,7 @@
                 }
             }
         },
-        "fun.PersonAudit": {
+        "fun.StudentAudit": {
             "type": "object",
             "properties": {
                 "age": {
@@ -374,7 +374,7 @@
                 }
             }
         },
-        "fun.PersonList": {
+        "fun.StudentList": {
             "type": "object",
             "properties": {
                 "metadata": {
@@ -383,12 +383,12 @@
                 "records": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/fun.Person"
+                        "$ref": "#/definitions/fun.Student"
                     }
                 }
             }
         },
-        "fun.PersonRequest": {
+        "fun.StudentRequest": {
             "type": "object",
             "required": [
                 "age",
