# components/fun-app/handlers/person_handler.go
@@ -1,231 +1,0 @@
-package handlers
-
-import (
-	"net/http"
-	"time"
-
-	"github.com/amanhigh/go-fun/common/util"
-	"github.com/amanhigh/go-fun/components/fun-app/manager"
-	"github.com/amanhigh/go-fun/models/fun"
-	"github.com/rs/zerolog"
-	"go.opentelemetry.io/otel/attribute"
-	"go.opentelemetry.io/otel/codes"
-	"go.opentelemetry.io/otel/metric"
-	"go.opentelemetry.io/otel/trace"
-
-	"github.com/gin-gonic/gin"
-)
-
-type PersonHandler interface {
-	CreatePerson(c *gin.Context)
-	GetPerson(c *gin.Context)
-	ListPersons(c *gin.Context)
-	ListPersonAudit(c *gin.Context)
-	UpdatePerson(c *gin.Context)
-	DeletePersons(c *gin.Context)
-}
-
-type PersonHandlerImpl struct {
-	Manager          manager.PersonManagerInterface `container:"type"`
-	Tracer           trace.Tracer                   `container:"type"`
-	CreateCounter    metric.Int64Counter            `container:"name"`
-	PersonCounter    metric.Int64UpDownCounter      `container:"name"`
-	PersonCreateTime metric.Float64Histogram        `container:"name"`
-}
-
-// CreatePerson godoc
-//
-// @Summary Create a new person
-// @Description Create a new person with the provided data
-// @Tags Person
-// @Accept json
-// @Produce json
-// @Param request body fun.PersonRequest true "Person Request"
-// @Success 201 {string} string "Id of created person"
-// @Failure 400 {string} string "Bad Request"
-// @Failure 500 {string} string "Internal Server Error"
-// @Router /person [post]
-func (ph *PersonHandlerImpl) CreatePerson(c *gin.Context) {
-	/* Captures Create Person Latency */
-	startTime := time.Now()
-	defer func() {
-		ph.PersonCreateTime.Record(c.Request.Context(), time.Since(startTime).Seconds())
-	}()
-
-	ctx, span := ph.Tracer.Start(c.Request.Context(), "CreatePerson.Handler")
-	defer span.End()
-
-	// Unmarshal the request
-	var request fun.PersonRequest
-	if err := c.ShouldBind(&request); err == nil {
-		ph.CreateCounter.Add(ctx, 1, metric.WithAttributes(attribute.String("gender", request.Gender)))
-
-		if person, err := ph.Manager.CreatePerson(ctx, request); err == nil {
-			c.JSON(http.StatusCreated, person)
-			span.SetStatus(codes.Ok, "Person Created")
-		} else {
-			span.SetStatus(codes.Error, err.Error())
-			span.RecordError(err)
-			c.JSON(err.Code(), err)
-		}
-	} else {
-		httpErr := util.ProcessValidationError(err)
-		c.JSON(httpErr.Code(), httpErr)
-	}
-}
-
-// GetPerson godoc
-//
-// @Summary Get a person by ID
-// @Description Get a person's details by their ID
-// @Tags Person
-// @Accept json
-// @Produce json
-// @Param id path string true "Person ID"
-// @Success 200 {object} fun.Person
-// @Failure 500 {string} string "Internal Server Error"
-// @Router /person/{id} [get]
-func (ph *PersonHandlerImpl) GetPerson(c *gin.Context) {
-	var path fun.PersonPath
-
-	ctx, span := ph.Tracer.Start(c.Request.Context(), "GetPerson.Handler", trace.WithAttributes(attribute.String("id", path.Id)))
-	defer span.End()
-
-	util.UnwrapRequest(c, nil, &path, nil, func(c *gin.Context) {
-		if person, err := ph.Manager.GetPerson(ctx, path.Id); err == nil {
-			c.JSON(http.StatusOK, person)
-		} else {
-			httpErr := util.ProcessValidationError(err)
-			span.SetStatus(codes.Error, httpErr.Error())
-			span.RecordError(httpErr)
-			c.JSON(httpErr.Code(), httpErr)
-		}
-	})
-}
-
-// ListPersons godoc
-//
-// @Summary List Person and Search
-// @Description List Person and Optionally Search
-// @Tags Person
-// @Accept json
-// @Produce json
-// @Param name query string false "Filter persons by name"
-// @Param gender query string false "Filter persons by gender"
-// @Param age query int false "Filter persons by age"
-// @Param order query string false "Sort order" Enums(asc, desc)
-// @Param sort_by query string false "Sort by" Enums(name, gender, age)
-// @Success 200 {object} fun.PersonList
-// @Failure 500 {string} string "Internal Server Error"
-// @Router /person [get]
-func (ph *PersonHandlerImpl) ListPersons(c *gin.Context) {
-	var personQuery fun.PersonQuery
-
-	ctx, span := ph.Tracer.Start(c.Request.Context(), "ListPersons.Handler")
-	defer span.End()
-
-	if err := c.ShouldBindQuery(&personQuery); err == nil {
-		if personList, err := ph.Manager.ListPersons(ctx, personQuery); err == nil {
-			count := int64(len(personList.Records))
-			ph.PersonCounter.Add(ctx, count)
-			c.JSON(http.StatusOK, personList)
-		} else {
-			zerolog.Ctx(ctx).Error().Err(err).Msg("ListPersons: Server Error")
-			c.JSON(http.StatusInternalServerError, err.Error())
-		}
-	} else {
-		httpErr := util.ProcessValidationError(err)
-		zerolog.Ctx(ctx).Error().Err(httpErr).Msg("ListPersons: Bad Request")
-		c.JSON(httpErr.Code(), httpErr)
-	}
-}
-
-// ListPersonAudit godoc
-//
-// @Summary List Person Audit
-// @Description List Person Audit by ID
-// @Tags Person
-// @Accept json
-// @Produce json
-// @Param id path string true "Person ID"
-// @Success 200 {object} []fun.PersonAudit
-// @Failure 500 {string} string "Internal Server Error"
-// @Router /person/{id}/audit [get]
-func (ph *PersonHandlerImpl) ListPersonAudit(c *gin.Context) {
-	var path fun.PersonPath
-
-	ctx, span := ph.Tracer.Start(c.Request.Context(), "ListPersonAudit.Handler", trace.WithAttributes(attribute.String("id", path.Id)))
-	defer span.End()
-
-	if err := c.ShouldBindUri(&path); err == nil {
-		if auditList, err := ph.Manager.ListPersonAudit(ctx, path.Id); err == nil {
-			c.JSON(http.StatusOK, auditList)
-		} else {
-			httpErr := util.ProcessValidationError(err)
-			zerolog.Ctx(ctx).Err(httpErr).Int("status", httpErr.Code()).Msg("ListPersonAudit: Server Error")
-			c.JSON(httpErr.Code(), httpErr)
-		}
-	}
-}
-
-// UpdatePerson godoc
-//
-// @Summary Update a person
-// @Description Update a person's details
-// @Tags Person
-// @Accept json
-// @Produce json
-// @Param id path string true "Person ID"
-// @Param request body fun.PersonRequest true "Person Request"
-// @Success 200 {string} string "UPDATED"
-// @Failure 400 {string} string "Bad Request"
-// @Failure 404 {string} string "Not Found"
-// @Failure 500 {string} string "Internal Server Error"
-// @Router /person/{id} [put]
-func (ph *PersonHandlerImpl) UpdatePerson(c *gin.Context) {
-	//https://stackoverflow.com/a/37544666/173136
-
-	ctx, span := ph.Tracer.Start(c.Request.Context(), "UpdatePerson.Handler")
-	defer span.End()
-
-	// Unmarshal the request
-	var request fun.PersonRequest
-	if err := c.ShouldBind(&request); err == nil {
-		if err := ph.Manager.UpdatePerson(ctx, c.Param("id"), request); err == nil {
-			//https://stackoverflow.com/a/827045/173136
-			c.JSON(http.StatusOK, "UPDATED")
-		} else {
-			zerolog.Ctx(ctx).Err(err).Int("status", err.Code()).Msg("UpdatePerson: Server Error")
-			c.JSON(err.Code(), err)
-		}
-	} else {
-		httpErr := util.ProcessValidationError(err)
-		zerolog.Ctx(ctx).Err(httpErr).Int("status", http.StatusBadRequest).Msg("UpdatePerson: Bad Request")
-		c.JSON(httpErr.Code(), httpErr)
-	}
-}
-
-// DeletePersons godoc
-//
-// @Summary Delete persons by ID
-// @Description Delete persons by their ID
-// @Tags Person
-// @Accept json
-// @Produce json
-// @Param id path string true "Person ID"
-// @Success 200 {string} string "DELETED"
-// @Failure 404 {string} string "Not Found"
-// @Failure 500 {string} string "Internal Server Error"
-// @Router /person/{id} [delete]
-func (ph *PersonHandlerImpl) DeletePersons(c *gin.Context) {
-	ctx, span := ph.Tracer.Start(c.Request.Context(), "DeletePersons.Handler")
-	defer span.End()
-
-	if err := ph.Manager.DeletePerson(ctx, c.Param("id")); err == nil {
-		c.JSON(http.StatusNoContent, "DELETED")
-	} else {
-		httpErr := util.ProcessValidationError(err)
-		zerolog.Ctx(ctx).Err(httpErr).Int("status", httpErr.Code()).Msg("DeletePersons: Server Error")
-		c.JSON(httpErr.Code(), httpErr)
-	}
-}
